final project version

--- a/Customer/src/main/res/values/colors.xml
+++ b/Customer/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="textLight">#FFFFFF</color>
     <color name="darkGray">#BDBDBD</color>
+    <color name="darkGrayFade">#80BDBDBD</color>
 </resources>
