--- a/Customer/src/main/res/layout-land/activity_main.xml
+++ b/Customer/src/main/res/layout-land/activity_main.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -12,9 +11,10 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
         android:src="@drawable/ic_account_circle_primary_24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,18 +22,18 @@
         android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/background_rounded"
         android:paddingBottom="20dp"
+        app:layout_constraintVertical_bias="0.1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        app:layout_constraintStart_toEndOf="@id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         #name
-
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
@@ -47,13 +47,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <EditText
+        <TextView
             android:id="@+id/nameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:hint="@string/not_set"
-            android:nextFocusDown="@id/surnameText"
+            android:text="@string/not_set"
             android:textAppearance="@android:style/TextAppearance.Material.Inverse"
             android:textSize="18sp"
             android:textStyle="italic"
@@ -63,7 +62,6 @@
             app:layout_constraintTop_toTopOf="@+id/textView1" />
 
         #personal info
-
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
@@ -78,7 +76,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         #surname
-
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
@@ -91,13 +88,12 @@
             app:layout_constraintEnd_toEndOf="@+id/textView1"
             app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
-        <EditText
+        <TextView
             android:id="@+id/surnameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:hint="@string/not_set"
-            android:nextFocusDown="@id/phoneText"
+            android:text="@string/not_set"
             android:textColor="@color/textLight"
             android:textSize="18sp"
             android:textStyle="italic"
@@ -108,7 +104,6 @@
             app:layout_constraintVertical_bias="0.0" />
 
         #Phone
-
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
@@ -121,13 +116,12 @@
             app:layout_constraintEnd_toEndOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-        <EditText
+        <TextView
             android:id="@+id/phoneText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:hint="@string/not_set"
-            android:nextFocusDown="@id/emailText"
+            android:text="@string/not_set"
             android:textColor="@color/textLight"
             android:textSize="18sp"
             android:textStyle="italic"
@@ -138,7 +132,6 @@
             app:layout_constraintVertical_bias="0.0" />
 
         #mail
-
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
@@ -151,13 +144,12 @@
             app:layout_constraintEnd_toEndOf="@+id/textView4"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        <EditText
+        <TextView
             android:id="@+id/emailText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:hint="@string/not_set"
-            android:nextFocusDown="@id/addressText"
+            android:text="@string/not_set"
             android:textColor="@color/textLight"
             android:textSize="18sp"
             android:textStyle="italic"
@@ -167,7 +159,6 @@
             app:layout_constraintTop_toTopOf="@+id/textView5" />
 
         #address
-
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
@@ -180,13 +171,12 @@
             app:layout_constraintEnd_toEndOf="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-        <EditText
+        <TextView
             android:id="@+id/addressText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:hint="@string/not_set"
-            android:nextFocusDown="@id/descriptionText"
+            android:text="@string/not_set"
             android:textColor="@color/textLight"
             android:textSize="18sp"
             android:textStyle="italic"
@@ -196,7 +186,6 @@
             app:layout_constraintTop_toTopOf="@+id/textView6" />
 
         #short description
-
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
@@ -209,12 +198,12 @@
             app:layout_constraintEnd_toEndOf="@+id/textView6"
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-        <EditText
+        <TextView
             android:id="@+id/descriptionText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:hint="@string/not_set"
+            android:text="@string/not_set"
             android:textColor="@color/textLight"
             android:textSize="18sp"
             android:textStyle="italic"
